updated-with-more-list

--- a/templates/getimage.html
+++ b/templates/getimage.html
@@ -41,6 +41,11 @@
     <ul class="list-group list-group-flush">
       <li class="list-group-item">score:{{context.image_info[keys]['score']}}</li>
       <li class="list-group-item">facial area:{{context.image_info[keys]['facial_area']}}</li>
+       <li class="list-group-item">right_eye:{{context.image_info[keys]['landmarks']['right_eye']}}</li>
+      <li class="list-group-item">left_eye:{{context.image_info[keys]['landmarks']['left_eye']}}</li>
+      <li class="list-group-item">nose:{{context.image_info[keys]['landmarks']['nose']}}</li>
+      <li class="list-group-item">mouth_right:{{context.image_info[keys]['landmarks']['mouth_right']}}</li>
+      <li class="list-group-item">mouth_left:{{context.image_info[keys]['landmarks']['mouth_left']}}</li>
       
     </ul>
   </div>
