--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,15 +16,15 @@
 
 <body>
     <header>
-        <div class="container">
-            <div>
-            </div>
-            <nav>
-                <ul>
-                </ul>
-            </nav>
+        <div class="container" >
+          <nav>
+          <ul>
+            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href="{{url_for('detectfaces')}}">Detect Faces</a></li>
+         </ul>
+        </nav>
         </div>
-    </header>
+      </header>
 
 
     {% block content %}
