--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,13 @@
 </script>
 
 <div class="whole">
+  <div class="upload font">
+    ATTENDENCE SYSTEM
+  </div>
   <div class="form">
     <div class="button-box">
       <div id="btn"></div>
       <button type="button" class="toggle"> Login</button>
-      <button type="button" class="toggle"> Signup</button>
     </div>
     <div class="center">
       <form method="POST">
@@ -45,9 +47,6 @@
         </div>
         <div class="center-log">
           <input type="submit" name="submit" value="Login" class="login">
-        </div>
-        <div class="signup">
-          Don't have an account? SignUp
         </div>
       </form>
     </div>
