--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
 
 <div class="whole">
   <div class="upload font">
-    ATTENDENCE SYSTEM
+    ATTENDANCE SYSTEM
   </div>
   <div class="form">
     <div class="button-box">
