--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,9 @@
 </script>
 
 <div class="whole">
-  <div class="upload font">
-    ATTENDENCE SYSTEM
+  <div class="upload">
+    <p class="font">ATTENDANCE SYSTEM</p>
+    
   </div>
   <div class="form">
     <div class="button-box">
