--- a/templates/detectfaces.html
+++ b/templates/detectfaces.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="row">
         {% for (i , keys) in zip(range(len), context.image_info) %}
-        <div class="card" style="width: 18rem;margin-left: 4%;">
+        <div class="card" style="width: 18rem;margin-left: 4%;margin-bottom: 4%;">
           <img class="card-img-top" src='/static/img/faces/face_{{i+1}}.jpg?{{context.img_time}}' height = "300px" width="300px">
           <div class="card-body">
             <h5 class="card-title">{{keys}}</h5>
