--- a/deployment/templates/takeattendance.html
+++ b/deployment/templates/takeattendance.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class = "button-display">
-  <a href="#">
+  <a href="{{url_for('capture')}}">
     <img class="camera" src="\static\img\camera.png" >
   </a>
 </div>
