--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -46,7 +46,7 @@ form .text {
   /*Username and Password*/
   position: relative;
   border-bottom: 2px solid #adadad;
-  margin: 30px 0;
+  margin: 30px -40px 20px 10px;
 }
 .text input {
   /*Username and Password input*/
