--- a/deployment/templates/takeattendance.html
+++ b/deployment/templates/takeattendance.html
@@ -22,7 +22,7 @@
           </iframe>
         </section>
         
-        <form method="post" action="{{ url_for('tasks') }}" >
+        <form method="POST"  >
           <input type="submit" value="Capture" name="capture"/>
         </form>
       </div>
