--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -5,8 +5,8 @@
 }
 
 .form {
-  height: 70%;
-  width: 30%;
+  height: 500px;
+  width: 20%;
   background: white;
   position: relative;
   margin: 2% auto;
