--- a/deployment/templates/takeattendance.html
+++ b/deployment/templates/takeattendance.html
@@ -10,8 +10,9 @@
   </div>
   <div class="upload">
     <form method="POST" enctype="multipart/form-data">
-      <button type="button" class="btn btn-outline-primary"><input type="file" name="file"></button>
-      <input type="submit" value="Upload" class="btn btn-primary">
+      <button type="button" class="btn btn-outline-primary js-btn" name="btn-upload"><input type="file" name="file"
+          class="js-file"></button>
+      <input type="submit" value="Upload" class="btn btn-primary  js-upload">
       <div class="upload">
         <h4 class="font">{{context.message}}</h4>
       </div>
