--- a/deployment/templates/login.html
+++ b/deployment/templates/login.html
@@ -13,43 +13,44 @@
 </script>
 
 
-  <div class="upload font">
-    ATTENDANCE SYSTEM
+<div class="upload font">
+  ATTENDANCE SYSTEM
+</div>
+<div class="form">
+  <div class="button-box">
+    <div id="btn"></div>
+    <button type="button" class="toggle"> Login</button>
   </div>
-  <div class="form">
-    <div class="button-box">
-      <div id="btn"></div>
-      <button type="button" class="toggle"> Login</button>
-    </div>
-    <div class="center">
-      <form method="POST">
-        <div class="text">
-          <div class="photo">
-            <img class="photo" src="\static\img\username.png">
-          </div>
-          <input type="text" name="username" required>
-          <span class="underline"></span>
-          <label class="ep">Username</label>
+  <div class="center">
+    <form method="POST">
+      <div class="text">
+        <div class="photo">
+          <img class="photo" src="\static\img\username.png">
         </div>
-        <div class="text">
-          <div class="photo">
-            <img class="photo" src="\static\img\password.png">
-          </div>
-          <input type="password" name="password" id="password" required>
-          <span class="underline"></span>
-          <label class="ep">  Password</label>
+        <input type="text" name="username" required>
+        <span class="underline"></span>
+        <label class="ep">Username</label>
+      </div>
+      <div class="text">
+        <div class="photo">
+          <img class="photo" src="\static\img\password.png">
         </div>
-        <div class="sh">
-          <label>
-            <input type="checkbox" name="checkbox" value="no" onclick="myFunction()">
-            <span class="show">Show Password</span>
-          </label>
-        </div>
-        <div class="center-log">
-          <input type="submit" name="submit" value="Login" class="login">
-        </div>
-      </form>
-    </div>
+        <input type="password" name="password" id="password" required>
+        <span class="underline"></span>
+        <label class="ep"> Password</label>
+      </div>
+      <div class="sh">
+        <label>
+          <input type="checkbox" name="checkbox" value="no" onclick="myFunction()">
+          <span class="show">Show Password</span>
+        </label>
+      </div>
+      <div class="center-log">
+        <input type="submit" name="submit" value="Login" class="login">
+      </div>
+    </form>
+    {{msg}}
   </div>
+</div>
 
 {% endblock %}
