--- a/deployment/templates/attendancedetails.html
+++ b/deployment/templates/attendancedetails.html
@@ -1,5 +1,4 @@
 {% extends "layout.html" %}
-{% block title %}Homepage{% endblock %}
+{% block title %}Image Detection{% endblock %}
 {% block content %}
-
 {% endblock %}
