--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -346,7 +346,7 @@ label > input[type="checkbox"]:checked + * {
   width: 50%;
   height: fit-content;
   margin-left: 38%;
-  margin-top: -23%;
+  margin-top: -300px;
 
 }
 
@@ -358,11 +358,25 @@ label > input[type="checkbox"]:checked + * {
   height: fit-content;
   position:relative;
   float:right;
-  margin-top: -4%;
-  margin-right: 5px;
+  margin-top: -50px;
+  margin-right: 10px;
 }
 
 .general{
   text-align: center;
 }
 
+.mess{
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Lato', sans-serif;
+  margin-left: -15px;
+  padding-left: 10px;
+  margin-top: 15px;
+  width: 320px;
+  height: 40px;
+  padding-top: 10px;
+  background-color: #FAA0A0;
+  color: red;
+  border-radius: 10px;
+}
