--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -15,12 +15,12 @@
   border-radius: 10px;
 }
 
-.button-box {
-  width: 110px;
-  margin: 35px auto;
+.image-box {
+  margin: auto;
+  width: 150px;
   position: relative;
-  box-shadow: 0 0 20px 9px #be67441f;
-  border-radius: 30px;
+  height: 150px;
+  margin-top: 10px;
 }
 .toggle {
   padding: 10px 30px;
