--- a/deployment/templates/profile.html
+++ b/deployment/templates/profile.html
@@ -2,7 +2,8 @@
 {% block title %}Homepage{% endblock %}
 {% block content %}
 <div class="topcorner">
-    <button type="button" class="btn btn-danger">Log Out</button>
+    <button type="button" class="btn btn-danger"><a href="{{url_for('logout')}}"
+            style="text-decoration : none; color : #000000;">Log Out</a></button>
 </div>
 <div class="centerd">
     <div class="centerdd">
@@ -20,37 +21,37 @@
 </div>
 <div class="general-info">
     <div class="card shadow-sm">
-    <div class="card-header bg-transparent border-0">
-    <h3 class="mb-0 general">General Information</h3>
+        <div class="card-header bg-transparent border-0">
+            <h3 class="mb-0 general">General Information</h3>
+        </div>
+        <div class="card-body pt-0">
+            <table class="table table-bordered">
+                <tr>
+                    <th width="30%">DEPT</th>
+                    <td width="2%">:</td>
+                    <td>Computer Engineering</td>
+                </tr>
+                <tr>
+                    <th width="30%">E-MAIL</th>
+                    <td width="2%">:</td>
+                    <td>nabin@gmail.com</td>
+                </tr>
+                <tr>
+                    <th width="30%">DOB</th>
+                    <td width="2%">:</td>
+                    <td>2055-02-13</td>
+                </tr>
+                <tr>
+                    <th width="30%">CONTACT NO.</th>
+                    <td width="2%">:</td>
+                    <td>9860495157</td>
+                </tr>
+                <tr>
+                    <th width="30%">BATCH:</th>
+                    <td width="2%">:</td>
+                    <td>2074/2017</td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <div class="card-body pt-0">
-    <table class="table table-bordered">
-    <tr>
-    <th width="30%">DEPT</th>
-    <td width="2%">:</td>
-    <td>Computer Engineering</td>
-    </tr>
-    <tr>
-    <th width="30%">E-MAIL</th>
-    <td width="2%">:</td>
-    <td>nabin@gmail.com</td>
-    </tr>
-    <tr>
-    <th width="30%">DOB</th>
-    <td width="2%">:</td>
-    <td>2055-02-13</td>
-    </tr>
-    <tr>
-    <th width="30%">CONTACT NO.</th>
-    <td width="2%">:</td>
-    <td>9860495157</td>
-    </tr>
-    <tr>
-    <th width="30%">BATCH:</th>
-    <td width="2%">:</td>
-    <td>2074/2017</td>
-    </tr>
-    </table>
-    </div>
-    </div>
-{% endblock %}
+    {% endblock %}
