--- a/deployment/templates/login.html
+++ b/deployment/templates/login.html
@@ -18,7 +18,7 @@
 </div>
 <div class="form">
   <div class="image-box">
-    <img src="\static\img\khwopalogo.png" class="image-box">
+    <img src="\static\img\logo.png" class="image-box">
   </div>
   <div class="center">
     <form method="POST">
@@ -49,11 +49,11 @@
       </div>
     </form>
     {% if 'Incorrect' in msg %}
-    <div class='mess' >
+    <div class='mess'>
       {{msg}}
     </div>
     {% endif %}
-    
+
   </div>
 </div>
 
