--- a/deployment/templates/takeattendance.html
+++ b/deployment/templates/takeattendance.html
@@ -1,7 +1,19 @@
 {% extends "layout.html" %}
 {% block title %}Image Detection{% endblock %}
 {% block content %}
-<div class="container">
+<p class="hidden username">{{login}}</p>
+<p class="hidden subject" id="subject_select"></p>
+<div class="container" id="take_container">
+  <div class="upload">
+    <h3 class="font">SUBJECT SELECTION</h3>
+  </div>
+  <div class="upload">
+    <p>Please select your subject for attendance</p>
+  </div>
+</div>
+
+
+<div class="container hidden" id="take_container_next">
   <div class="upload">
     <h3 class="font">TAKE ATTENDANCE</h3>
   </div>
@@ -19,6 +31,7 @@
     </form>
   </div>
 </div>
+
 <div style="display: flex;">
   <div class="image-sec">
     <div class="row">
@@ -69,6 +82,7 @@
     </table>
     {% endif %}
   </div>
-
 </div>
+
+<script type="text/javascript" src="{{url_for('static', filename='js/script.js')}}"></script>
 {% endblock %}
