--- a/deployment/templates/attendancedetails.html
+++ b/deployment/templates/attendancedetails.html
@@ -1,6 +1,136 @@
 {% extends "layout.html" %}
 {% block title %}Image Detection{% endblock %}
 {% block content %}
-<!-- only for test -->
+<div class="pos">
+    <div class="row" style="justify-content: center">
+        <div class="card col-md-3 mt-100 cardinfo">
+            <div class="card-content">
+                <div class="card-body p-0 cardbody">
+                    <div class="profile"> <img src="\static\img\img_avatar.png"> </div>
+                    <div class="card-title"> <h3>Big Data (Siddhant Sir)</h3> </div>
+                    <hr>
+                    <div class="card-subtitle">
+                        <h4>No. of Days:</h4>
+                        <p>10</p>
+                    </div>
+                    <div class="card-subtitle">
+                        <h4>Present Days:</h4>
+                        <p>10</p>
+                    </div>                    
+                    <div class="card-subtitle">
+                        <h4>Abscent Days:</h4>
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card col-md-3 mt-100 cardinfo">
+            <div class="card-content">
+                <div class="card-body p-0 cardbody">
+                    <div class="profile"> <img src="\static\img\img_avatar.png"> </div>
+                    <div class="card-title"> <h3>Big Data (Siddhant Sir)</h3> </div>
+                    <hr>
+                    <div class="card-subtitle">
+                        <h4>No. of Days:</h4>
+                        <p>10</p>
+                    </div>
+                    <div class="card-subtitle">
+                        <h4>Present Days:</h4>
+                        <p>10</p>
+                    </div>                    <div class="card-subtitle">
+                        <h4>Abscent Days:</h4>
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card col-md-3 mt-100 cardinfo">
+            <div class="card-content">
+                <div class="card-body p-0 cardbody">
+                    <div class="profile"> <img src="\static\img\img_avatar.png"> </div>
+                    <div class="card-title"> <h3>Big Data (Siddhant Sir)</h3> </div>
+                    <hr>
+                    <div class="card-subtitle">
+                        <h4>No. of Days:</h4>
+                        <p>10</p>
+                    </div>
+                    <div class="card-subtitle">
+                        <h4>Present Days:</h4>
+                        <p>10</p>
+                    </div>                    <div class="card-subtitle">
+                        <h4>Abscent Days:</h4>
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+
+<div class="pos">
+    <div class="row" style="justify-content: center">
+        <div class="card col-md-3 mt-100 cardinfo">
+            <div class="card-content">
+                <div class="card-body p-0 cardbody">
+                    <div class="profile"> <img src="\static\img\img_avatar.png"> </div>
+                    <div class="card-title"> <h3>Big Data (Siddhant Sir)</h3> </div>
+                    <hr>
+                    <div class="card-subtitle">
+                        <h4>No. of Days:</h4>
+                        <p>10</p>
+                    </div>
+                    <div class="card-subtitle">
+                        <h4>Present Days:</h4>
+                        <p>10</p>
+                    </div>                    
+                    <div class="card-subtitle">
+                        <h4>Abscent Days:</h4>
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card col-md-3 mt-100 cardinfo">
+            <div class="card-content">
+                <div class="card-body p-0 cardbody">
+                    <div class="profile"> <img src="\static\img\img_avatar.png"> </div>
+                    <div class="card-title"> <h3>Big Data (Siddhant Sir)</h3> </div>
+                    <hr>
+                    <div class="card-subtitle">
+                        <h4>No. of Days:</h4>
+                        <p>10</p>
+                    </div>
+                    <div class="card-subtitle">
+                        <h4>Present Days:</h4>
+                        <p>10</p>
+                    </div>                    <div class="card-subtitle">
+                        <h4>Abscent Days:</h4>
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card col-md-3 mt-100 cardinfo">
+            <div class="card-content">
+                <div class="card-body p-0 cardbody">
+                    <div class="profile"> <img src="\static\img\img_avatar.png"> </div>
+                    <div class="card-title"> <h3>Big Data (Siddhant Sir)</h3> </div>
+                    <hr>
+                    <div class="card-subtitle">
+                        <h4>No. of Days:</h4>
+                        <p>10</p>
+                    </div>
+                    <div class="card-subtitle">
+                        <h4>Present Days:</h4>
+                        <p>10</p>
+                    </div>                    <div class="card-subtitle">
+                        <h4>Abscent Days:</h4>
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+
+
 
 {% endblock %}
