--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -380,3 +380,50 @@ label > input[type="checkbox"]:checked + * {
   color: red;
   border-radius: 10px;
 }
+
+.sub{
+
+  text-align: center;
+}
+
+.subbutton{
+  width: 200px;
+  height: 80px;
+  margin-right: 20px;
+  font-family: 'Lato', sans-serif;
+}
+.profile img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%
+}
+.cardinfo {
+  border-radius: 15px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 200px;
+  height: 300px;
+  width: 300px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .2)
+}
+
+.cardbody {
+  position: relative;
+  bottom: 35px
+}
+
+.pos{
+  width: 100%;
+  height: fit-content;
+  margin-top: 3%;
+}
+
+.card-title{
+  font: 30px;
+  font-weight: bold;
+}
+
+.card-subtitle p,
+.card-subtitle h4{
+  display: inline;
+}
