--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -402,8 +402,8 @@ label > input[type="checkbox"]:checked + * {
   margin-left: 30px;
   margin-right: 30px;
   margin-top: 200px;
-  height: 300px;
-  width: 300px;
+  height: fit-content;
+  width: fit-content;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .2)
 }
 
@@ -415,7 +415,7 @@ label > input[type="checkbox"]:checked + * {
 .pos{
   width: 100%;
   height: fit-content;
-  margin-top: 3%;
+  margin-top: 5%;
 }
 
 .card-title{
@@ -423,7 +423,56 @@ label > input[type="checkbox"]:checked + * {
   font-weight: bold;
 }
 
-.card-subtitle p,
+.card-subtitle h3,
 .card-subtitle h4{
   display: inline;
+}
+ 
+.card{
+   margin-bottom: 80px;
+   transition: all 0.2s ease;
+   cursor: pointer;
+}
+
+.card:hover {
+  box-shadow: 5px 6px 6px 2px #e9ecef;
+  transform: scale(1.1);
+}
+ .bold{
+   font-weight: bold;
+ }
+
+ 
+.link{
+  text-decoration: none;
+  color: black;
+}
+
+.link:hover{
+  color: black;
+}
+
+.percent{
+  position: absolute;
+  right: 0px;
+  width: fit-content;
+  padding: 10px;
+}
+
+.red{
+  background-color: #FAA0A0!important;
+}
+
+.green{
+  background-color: #90ee90!important;
+}
+
+.cardl {
+  border-radius: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 200px;
+  height: fit-content!important;
+  width: fit-content!important;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .2)
 }
