--- a/deployment/templates/attendancedetails.html
+++ b/deployment/templates/attendancedetails.html
@@ -100,6 +100,7 @@
 </div>
 <script type="text/javascript" src="{{url_for('static', filename='js/script_teacher.js')}}"></script>
 {% if show==True %}
+{{subject_selected}}
 <div class="pos">
     <div class="row" style="justify-content: center">
         {% for i in attendance_data['student'] %}
